--- a/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
+++ b/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This tutorial will briefly describe GWpy, a python package for gravitational astrophysics, and walk-through how you can use this to speed up access to, and processing of, GWOSC data.\n",
     "    \n",
-    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb)\n",
+    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/Day_1/Tuto%201.2%20Open%20Data%20access%20with%20GWpy.ipynb)\n",
     "\n",
     "<div class=\"alert alert-info\">This notebook were generated using python 3.7, but should work on python 2.7, 3.6, or 3.7.</div>"
    ]
@@ -29,11 +29,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2019-04-04 16:35:09--  https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.16.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.16.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 99 [text/plain]\n",
+      "Saving to: ‘requirements.txt’\n",
+      "\n",
+      "requirements.txt    100%[===================>]      99  --.-KB/s    in 0s      \n",
+      "\n",
+      "2019-04-04 16:35:12 (31.5 MB/s) - ‘requirements.txt’ saved [99/99]\n",
+      "\n",
+      "Collecting lalsuite==6.49 (from -r ./requirements.txt (line 1))\n",
+      "/Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages/pip/_vendor/msgpack/fallback.py:222: PendingDeprecationWarning: encoding is deprecated, Use raw=False instead.\n",
+      "  PendingDeprecationWarning)\n",
+      "  Using cached https://files.pythonhosted.org/packages/30/d3/bb04733a8a9b51ca55a8e43862e33c6f72439e2d90c1c99c62481d387223/lalsuite-6.49-cp37-cp37m-macosx_10_11_x86_64.whl\n",
+      "Requirement already satisfied: gwpy==0.14.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from -r ./requirements.txt (line 2)) (0.14.2)\n",
+      "Requirement already satisfied: PyCBC==1.13.5 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from -r ./requirements.txt (line 3)) (1.13.5)\n",
+      "Requirement already satisfied: gwosc==0.4.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from -r ./requirements.txt (line 4)) (0.4.3)\n",
+      "Collecting bilby==0.4.1 (from -r ./requirements.txt (line 5))\n",
+      "Requirement already satisfied: healpy==1.12.8 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from -r ./requirements.txt (line 6)) (1.12.8)\n",
+      "Collecting astropy==2.0.12 (from -r ./requirements.txt (line 7))\n",
+      "Requirement already satisfied: scipy in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (1.2.1)\n",
+      "Requirement already satisfied: numpy>=1.7 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (1.15.2)\n",
+      "Requirement already satisfied: python-dateutil in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (2.8.0)\n",
+      "Requirement already satisfied: matplotlib in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (3.0.3)\n",
+      "Requirement already satisfied: ligo-segments in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (1.2.0)\n",
+      "Requirement already satisfied: lscsoft-glue in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lalsuite==6.49->-r ./requirements.txt (line 1)) (2.0.0)\n",
+      "Requirement already satisfied: dqsegdb2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (1.0.1)\n",
+      "Requirement already satisfied: gwdatafind in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (1.0.3)\n",
+      "Requirement already satisfied: h5py>=1.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (2.9.0)\n",
+      "Requirement already satisfied: ligotimegps>=1.2.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (2.0.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (1.12.0)\n",
+      "Requirement already satisfied: tqdm>=4.10.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2->-r ./requirements.txt (line 2)) (4.31.1)\n",
+      "Requirement already satisfied: mpld3>=0.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (0.3)\n",
+      "Requirement already satisfied: cython in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (0.29.6)\n",
+      "Requirement already satisfied: requests>=1.2.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (2.21.0)\n",
+      "Requirement already satisfied: decorator>=3.4.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (4.4.0)\n",
+      "Requirement already satisfied: jinja2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (2.10)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (4.7.1)\n",
+      "Requirement already satisfied: pillow in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (5.4.1)\n",
+      "Requirement already satisfied: kombine>=0.8.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (0.8.3)\n",
+      "Requirement already satisfied: emcee==2.2.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (2.2.1)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from PyCBC==1.13.5->-r ./requirements.txt (line 3)) (1.0.7)\n",
+      "Requirement already satisfied: dynesty in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from bilby==0.4.1->-r ./requirements.txt (line 5)) (0.9.3)\n",
+      "Requirement already satisfied: corner in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from bilby==0.4.1->-r ./requirements.txt (line 5)) (2.0.1)\n",
+      "Requirement already satisfied: pandas in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from bilby==0.4.1->-r ./requirements.txt (line 5)) (0.24.1)\n",
+      "Requirement already satisfied: deepdish in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from bilby==0.4.1->-r ./requirements.txt (line 5)) (0.3.4)\n",
+      "Requirement already satisfied: future in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from bilby==0.4.1->-r ./requirements.txt (line 5)) (0.17.1)\n",
+      "Collecting pytest<3.7,>=2.8 (from astropy==2.0.12->-r ./requirements.txt (line 7))\n",
+      "  Using cached https://files.pythonhosted.org/packages/d8/e9/73246a565c34c5f203dd78bc2382e0e93aa7a249cdaeba709099eb1bc701/pytest-3.6.4-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib->lalsuite==6.49->-r ./requirements.txt (line 1)) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib->lalsuite==6.49->-r ./requirements.txt (line 1)) (1.0.1)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib->lalsuite==6.49->-r ./requirements.txt (line 1)) (2.3.1)\n",
+      "Requirement already satisfied: pyOpenSSL in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from lscsoft-glue->lalsuite==6.49->-r ./requirements.txt (line 1)) (19.0.0)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from requests>=1.2.1->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (1.24.1)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from requests>=1.2.1->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (2.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from requests>=1.2.1->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (2019.3.9)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from requests>=1.2.1->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (3.0.4)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from jinja2->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (1.1.1)\n",
+      "Requirement already satisfied: soupsieve>=1.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from beautifulsoup4>=4.6.0->PyCBC==1.13.5->-r ./requirements.txt (line 3)) (1.8)\n",
+      "Requirement already satisfied: pytz>=2011k in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pandas->bilby==0.4.1->-r ./requirements.txt (line 5)) (2018.9)\n",
+      "Requirement already satisfied: tables in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from deepdish->bilby==0.4.1->-r ./requirements.txt (line 5)) (3.4.4)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7)) (18.2.0)\n",
+      "Requirement already satisfied: setuptools in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7)) (40.8.0)\n",
+      "Requirement already satisfied: py>=1.5.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7)) (1.8.0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: atomicwrites>=1.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7)) (1.3.0)\n",
+      "Collecting pluggy<0.8,>=0.5 (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7))\n",
+      "  Using cached https://files.pythonhosted.org/packages/f5/f1/5a93c118663896d83f7bcbfb7f657ce1d0c0d617e6b4a443a53abcc658ca/pluggy-0.7.1-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: more-itertools>=4.0.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pytest<3.7,>=2.8->astropy==2.0.12->-r ./requirements.txt (line 7)) (4.3.0)\n",
+      "Requirement already satisfied: cryptography>=2.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pyOpenSSL->lscsoft-glue->lalsuite==6.49->-r ./requirements.txt (line 1)) (2.5)\n",
+      "Requirement already satisfied: numexpr>=2.5.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from tables->deepdish->bilby==0.4.1->-r ./requirements.txt (line 5)) (2.6.9)\n",
+      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cryptography>=2.3->pyOpenSSL->lscsoft-glue->lalsuite==6.49->-r ./requirements.txt (line 1)) (1.12.2)\n",
+      "Requirement already satisfied: asn1crypto>=0.21.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cryptography>=2.3->pyOpenSSL->lscsoft-glue->lalsuite==6.49->-r ./requirements.txt (line 1)) (0.24.0)\n",
+      "Requirement already satisfied: pycparser in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cffi!=1.11.3,>=1.8->cryptography>=2.3->pyOpenSSL->lscsoft-glue->lalsuite==6.49->-r ./requirements.txt (line 1)) (2.19)\n",
+      "Installing collected packages: lalsuite, bilby, pluggy, pytest, astropy\n",
+      "  Found existing installation: lalsuite 6.52\n",
+      "\u001b[31mCannot uninstall 'lalsuite'. It is a distutils installed project and thus we cannot accurately determine which files belong to it which would lead to only a partial uninstall.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! wget --output-document=requirements.txt 'https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt'\n",
     "! pip install -r ./requirements.txt"
@@ -55,10 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -108,10 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -136,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -172,10 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -232,10 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -252,7 +330,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "plot = data.plot()"
+    "plot = hdata.plot()"
    ]
   },
   {
@@ -287,10 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -327,10 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -369,10 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.signal import get_window\n",
@@ -389,10 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -432,10 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -458,10 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -470,7 +536,7 @@
        "<Plot size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,10 +566,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -539,10 +603,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -551,7 +613,7 @@
        "<Plot size 432x288 with 1 Axes>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
