--- a/Day_1/Tuto 1.3 Q-transforms with GWpy.ipynb
+++ b/Day_1/Tuto 1.3 Q-transforms with GWpy.ipynb
@@ -118,7 +118,7 @@
     "\n",
     "ldata = TimeSeries.fetch_open_data('L1', int(gps)-512, int(gps)+512, cache=True)\n",
     "print(\"GW170817 data\")\n",
-    "print(data)"
+    "print(ldata)"
    ]
   },
   {
