fix critical bug with 36990a5 and implement PR 3

--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -359,7 +359,7 @@
     "dec = np.rad2deg(0.5 * np.pi - theta)\n",
     "\n",
     "ra = round(ra,5); dec = round(dec,5);\n",
-    "print(\"The sky coordinates of the highest probability pixel are:\", \"ra =\",ra,\"dec =\",dec, \"(ICRS coordinates in degrees)" )"
+    "print(\"The sky coordinates of the highest probability pixel are:\", \"ra =\",ra,\"dec =\",dec, \"(ICRS coordinates in degrees)\")"
    ]
   },
   {
@@ -380,54 +380,6 @@
    },
    "source": [
     "Alternatively, you can use [astropy-healpix](https://astropy-healpix.readthedocs.io/en/latest/installation.html) to perform the same tasks. We recommand this alternative solution for the Windows OS users."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 743
-    },
-    "colab_type": "code",
-    "collapsed": false,
-    "id": "O4U9KTauA6pQ",
-    "outputId": "05c842c1-c451-419d-9d51-2bc56a8328b7"
-   },
-   "outputs": [],
-   "source": [
-    "from astropy.io import fits\n",
-    "hdulist = fits.open(\"https://dcc.ligo.org/public/0157/P1800381/002/GW170818_skymap.fits.gz\")\n",
-    "\n",
-    "hdulist[1].header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "collapsed": false,
-    "id": "S_gCi9tkA6pc",
-    "outputId": "d5734360-ae5c-4ebe-d22e-54d07bbff2c8"
-   },
-   "outputs": [],
-   "source": [
-    "from healpy import pix2ang\n",
-    "\n",
-    "hdulist[1].header['NSIDE'] # get the healpix resolution - nside - from the header\n",
-    "\n",
-    "theta, phi = hp.pix2ang(nside, ipix_max)\n",
-    "ra = np.rad2deg(phi)\n",
-    "dec = np.rad2deg(0.5 * np.pi - theta)\n",
-    "\n",
-    "ra = round(ra,5); dec = round(dec,12);\n",
-    "print(\"The sky coordinates of the highest probability pixel are:\", \"ra =\",ra,\"dec =\",dec, )"
    ]
   },
   {
