Address comments from Agata (thanks!!)

--- a/Day_2/Tuto_2.3_Signal_consistency_and_significance.ipynb
+++ b/Day_2/Tuto_2.3_Signal_consistency_and_significance.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "#### Generate our template waveform and calculate the Signal-to-noise time series ####\n",
     "\n",
-    "To calculate the signal-to-noise time series, we need to generate an estimate of the signal. For this purpose we will assume the source black holes are non spinning, have equal mass, and the agree with the total mass estimate for the system as a whole. A better method would be to use the maximum likelihood estimate from an analysis of the LIGO data alone, however, this is sufficient for the purposes of this tutorial."
+    "To calculate the signal-to-noise time series, we need to generate an estimate of the signal. For this purpose we will assume the source black holes are non spinning, have equal mass, and they agree with the total mass estimate for the system as a whole. A better method would be to use the maximum likelihood estimate from an analysis of the LIGO data alone, however, this is sufficient for the purposes of this tutorial."
    ]
   },
   {
