--- a/Day_1/Tuto 1.4 Generating waveforms.ipynb
+++ b/Day_1/Tuto 1.4 Generating waveforms.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that in the this case, the two polariations differ only by the phase of the signal. This holds for systems where the orbital plane of the binary doesn't precess. In the zoom-in plot, we can see the merger itself and the ringdown that follows."
+    "We can see that in the this case, the two polarizations differ only by the phase of the signal. This holds for systems where the orbital plane of the binary doesn't precess. In the zoom-in plot, we can see the merger itself and the ringdown that follows."
    ]
   },
   {
@@ -183,6 +183,15 @@
     "pylab.grid()\n",
     "pylab.xlabel('Time (s)')\n",
     "pylab.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Generate and plot the waveform associated to the binary neutron star merger GW170817. Look up the GWTC#1 catalog page to obtain the estimated parameter for this source. "
    ]
   }
  ],
