Option to remove weave

--- a/Day_2/Tuto_2.1_Matched_filtering_introduction.ipynb
+++ b/Day_2/Tuto_2.1_Matched_filtering_introduction.ipynb
@@ -266,9 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a PSD for whitening the data\n",
@@ -348,10 +346,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/iwharry/repositories/git/ligo_repos/odw-2019/Day_2\r\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -372,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
