--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -284,7 +284,7 @@
    "source": [
     "\n",
     "hp.mollview(prob, title='GW170818 LALInference',)\n",
-    "hp.graticule()\n",
+    "hp.graticule()\n"
    ]
   },
   {
