--- a/Day_1/Tuto 1.1 Discovering Open Data.ipynb
+++ b/Day_1/Tuto 1.1 Discovering Open Data.ipynb
@@ -61,22 +61,63 @@
       "metadata": {
         "id": "DXoxopwkQ8NY",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4153209e-2f25-4b92-c039-ac552ee5aec8"
+        "outputId": "4c0c9ddd-2db6-45f7-d7e2-386c026135bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 734
+        }
       },
       "source": [
         "import sys\n",
-        "!curl --silent --output requirements.txt https://raw.githubusercontent.com/jkanner/odw-2019/master/requirements.txt\n",
-        "!{sys.executable} -m pip install -q -r requirements.txt"
+        "\n",
+        "! pip install gwosc gwpy"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages/pip/_vendor/msgpack/fallback.py:222: PendingDeprecationWarning: encoding is deprecated, Use raw=False instead.\n",
-            "  PendingDeprecationWarning)\n",
-            "\u001b[31mCannot uninstall 'lalsuite'. It is a distutils installed project and thus we cannot accurately determine which files belong to it which would lead to only a partial uninstall.\u001b[0m\n"
+            "Collecting gwosc\n",
+            "  Downloading https://files.pythonhosted.org/packages/6d/ff/67426ce11f9f3432e020f5d5ef796e1d8e1c2a76b555c8705177f4347f99/gwosc-0.4.3-py2.py3-none-any.whl\n",
+            "Collecting gwpy\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f0/33/6c78801e1f6f55932321e1de80f9fe6ba006298cc3e03978a88859286e6f/gwpy-1.0.1-py2.py3-none-any.whl (1.4MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.4MB 9.0MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from gwosc) (1.12.0)\n",
+            "Requirement already satisfied: scipy>=0.12.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.4.1)\n",
+            "Collecting ligotimegps>=1.2.1\n",
+            "  Downloading https://files.pythonhosted.org/packages/69/b6/6d6d0585fa2ae936a9f5d411b1f0fbe9fcb0aca0c51a775aa4f8f95fdf5e/ligotimegps-2.0.1-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: numpy>=1.7.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.17.5)\n",
+            "Requirement already satisfied: astropy>=1.3.0; python_version >= \"3.5\" in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.0)\n",
+            "Collecting ligo-segments>=1.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/cd/225e331e95cf6aff8ba13bf9a8053b29248a5e71f7fa9bbb1f0db1eaadff/ligo-segments-1.2.0.tar.gz (48kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 5.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: h5py>=1.3 in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.8.0)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.6.1)\n",
+            "Requirement already satisfied: matplotlib!=2.1.0,!=2.1.1,>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (3.1.2)\n",
+            "Requirement already satisfied: tqdm>=4.10.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.28.1)\n",
+            "Collecting dqsegdb2\n",
+            "  Downloading https://files.pythonhosted.org/packages/5d/97/355617233a3b4a25966b35a536379d23345e9783db009248a199a48e60dd/dqsegdb2-1.0.1-py2.py3-none-any.whl\n",
+            "Collecting gwdatafind\n",
+            "  Downloading https://files.pythonhosted.org/packages/d6/9e/616124723b7a8f2a5399f9288b056bb31f37222b0b7cae46f6bafaa42154/gwdatafind-1.0.4-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (1.1.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (0.10.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (2.4.6)\n",
+            "Collecting pyOpenSSL\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9e/de/f8342b68fa9e981d348039954657bdf681b2ab93de27443be51865ffa310/pyOpenSSL-19.1.0-py2.py3-none-any.whl (53kB)\n",
+            "\u001b[K     |████████████████████████████████| 61kB 6.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (42.0.2)\n",
+            "Collecting cryptography>=2.8\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ca/9a/7cece52c46546e214e10811b36b2da52ce1ea7fa203203a629b8dfadad53/cryptography-2.8-cp34-abi3-manylinux2010_x86_64.whl (2.3MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.3MB 21.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cffi!=1.11.3,>=1.8 in /usr/local/lib/python3.6/dist-packages (from cryptography>=2.8->pyOpenSSL->gwdatafind->gwpy) (1.13.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.6/dist-packages (from cffi!=1.11.3,>=1.8->cryptography>=2.8->pyOpenSSL->gwdatafind->gwpy) (2.19)\n",
+            "Building wheels for collected packages: ligo-segments\n",
+            "  Building wheel for ligo-segments (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for ligo-segments: filename=ligo_segments-1.2.0-cp36-cp36m-linux_x86_64.whl size=83621 sha256=aa063356a79ae99012598617c690b7240b5d77ff2f8b6073fa0c9ec806a07e15\n",
+            "  Stored in directory: /root/.cache/pip/wheels/5d/1e/4a/ab4122baed7d67f6abce65b2b12049d3bc7fe5dad24edf89df\n",
+            "Successfully built ligo-segments\n",
+            "Installing collected packages: gwosc, ligotimegps, ligo-segments, cryptography, pyOpenSSL, gwdatafind, dqsegdb2, gwpy\n",
+            "Successfully installed cryptography-2.8 dqsegdb2-1.0.1 gwdatafind-1.0.4 gwosc-0.4.3 gwpy-1.0.1 ligo-segments-1.2.0 ligotimegps-2.0.1 pyOpenSSL-19.1.0\n"
           ],
           "name": "stdout"
         }
@@ -107,19 +148,22 @@
       "metadata": {
         "id": "JzRTNoRQQ8Nl",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "038d9cf2-af15-4f01-e23d-0616303b9d71"
+        "outputId": "20870d29-093b-41b1-ac9e-fe91b1a0d4aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "!{sys.executable} -m pip install \"gwosc\""
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: gwosc in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (0.4.3)\r\n",
-            "Requirement already satisfied: six>=1.9.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwosc) (1.12.0)\r\n"
+            "Requirement already satisfied: gwosc in /usr/local/lib/python3.6/dist-packages (0.4.3)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from gwosc) (1.12.0)\n"
           ],
           "name": "stdout"
         }
@@ -154,15 +198,18 @@
       "metadata": {
         "id": "-BkUqpvkQ8Nv",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "c0ea10bf-52ed-42ff-89f4-e221e0980ace"
+        "outputId": "00b6fd04-918d-49e7-ad18-91b7cdb4c5b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "from gwosc.datasets import find_datasets\n",
         "events = find_datasets(type=\"event\")\n",
         "print(events)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,14 +237,17 @@
       "metadata": {
         "id": "Hjc54bsuQ8N0",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1580daf9-e09a-4225-9a7d-db815219e101"
+        "outputId": "a6c2e4ae-d40e-4167-f93c-97b3683b4f19",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "source": [
         "print(find_datasets(type=\"event\", detector=\"V1\"))\n",
         "print(find_datasets(type=\"event\", detector=\"G1\"))"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,13 +274,16 @@
       "metadata": {
         "id": "XZTniqwHQ8N-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a993b85f-d047-4618-b695-3af4d45f2cfe"
+        "outputId": "fcbadbad-d227-4fd6-af33-d767effcd548",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "print(find_datasets(type=\"event\", detector=\"L1\", segment=(1164556817, 1187733618)))"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,15 +309,18 @@
       "metadata": {
         "id": "tdr8c15_Q8OD",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f6728512-d67a-4bbd-c192-95cef9cc775b"
+        "outputId": "6a9551cc-8c7b-4e68-c4bc-1e173bfef95b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from gwosc.datasets import event_gps\n",
         "gps = event_gps('GW170817')\n",
         "print(gps)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,14 +356,17 @@
       "metadata": {
         "id": "QYsQSPNJQ8OK",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "34f52eaa-3e95-4bf4-c0e6-dbb7cfbf7f2e"
+        "outputId": "c94aabb2-eeb8-4bc4-e1e9-16b1266184bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "from gwosc.datasets import run_segment\n",
         "print(run_segment('O1'))"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,15 +396,18 @@
       "metadata": {
         "id": "uMb1bsBNQ8OQ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "37ceadc4-d111-4491-ba57-55d99f8203ea"
+        "outputId": "329930f7-37a3-4eff-ebc1-ce66ae73d498",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
       },
       "source": [
         "from gwosc.locate import get_event_urls\n",
         "urls = get_event_urls('GW150914')\n",
         "print(urls)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,14 +433,17 @@
       "metadata": {
         "id": "H7MfuRbPQ8OW",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "bb3dbc3c-50f0-454f-abae-047397fc8e37"
+        "outputId": "1d17cbd4-a8e6-46a3-e582-07fcdf869490",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "urls = get_event_urls('GW150914', duration=32, detector='L1')\n",
         "print(urls)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
