--- a/Day_1/Tuto 1.1 Discovering Open Data.ipynb
+++ b/Day_1/Tuto 1.1 Discovering Open Data.ipynb
@@ -61,10 +61,10 @@
       "metadata": {
         "id": "DXoxopwkQ8NY",
         "colab_type": "code",
-        "outputId": "4c0c9ddd-2db6-45f7-d7e2-386c026135bc",
+        "outputId": "03a01be0-453f-4634-9470-9924639d9a88",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 734
+          "height": 748
         }
       },
       "source": [
@@ -81,42 +81,42 @@
             "  Downloading https://files.pythonhosted.org/packages/6d/ff/67426ce11f9f3432e020f5d5ef796e1d8e1c2a76b555c8705177f4347f99/gwosc-0.4.3-py2.py3-none-any.whl\n",
             "Collecting gwpy\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f0/33/6c78801e1f6f55932321e1de80f9fe6ba006298cc3e03978a88859286e6f/gwpy-1.0.1-py2.py3-none-any.whl (1.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.4MB 9.0MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.4MB 5.9MB/s \n",
             "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from gwosc) (1.12.0)\n",
-            "Requirement already satisfied: scipy>=0.12.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.4.1)\n",
-            "Collecting ligotimegps>=1.2.1\n",
-            "  Downloading https://files.pythonhosted.org/packages/69/b6/6d6d0585fa2ae936a9f5d411b1f0fbe9fcb0aca0c51a775aa4f8f95fdf5e/ligotimegps-2.0.1-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: numpy>=1.7.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.17.5)\n",
-            "Requirement already satisfied: astropy>=1.3.0; python_version >= \"3.5\" in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.0)\n",
-            "Collecting ligo-segments>=1.0.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/cd/225e331e95cf6aff8ba13bf9a8053b29248a5e71f7fa9bbb1f0db1eaadff/ligo-segments-1.2.0.tar.gz (48kB)\n",
-            "\u001b[K     |████████████████████████████████| 51kB 5.6MB/s \n",
-            "\u001b[?25hRequirement already satisfied: h5py>=1.3 in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.8.0)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.6.1)\n",
-            "Requirement already satisfied: matplotlib!=2.1.0,!=2.1.1,>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (3.1.2)\n",
-            "Requirement already satisfied: tqdm>=4.10.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.28.1)\n",
+            "Requirement already satisfied: h5py>=1.3 in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.8.0)\n",
             "Collecting dqsegdb2\n",
             "  Downloading https://files.pythonhosted.org/packages/5d/97/355617233a3b4a25966b35a536379d23345e9783db009248a199a48e60dd/dqsegdb2-1.0.1-py2.py3-none-any.whl\n",
+            "Collecting ligotimegps>=1.2.1\n",
+            "  Downloading https://files.pythonhosted.org/packages/69/b6/6d6d0585fa2ae936a9f5d411b1f0fbe9fcb0aca0c51a775aa4f8f95fdf5e/ligotimegps-2.0.1-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: tqdm>=4.10.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.28.1)\n",
             "Collecting gwdatafind\n",
             "  Downloading https://files.pythonhosted.org/packages/d6/9e/616124723b7a8f2a5399f9288b056bb31f37222b0b7cae46f6bafaa42154/gwdatafind-1.0.4-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (1.1.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (0.10.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (2.4.6)\n",
+            "Requirement already satisfied: matplotlib!=2.1.0,!=2.1.1,>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from gwpy) (3.1.2)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from gwpy) (2.6.1)\n",
+            "Collecting ligo-segments>=1.0.0\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/cd/225e331e95cf6aff8ba13bf9a8053b29248a5e71f7fa9bbb1f0db1eaadff/ligo-segments-1.2.0.tar.gz (48kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 5.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.7.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.17.5)\n",
+            "Requirement already satisfied: astropy>=1.3.0; python_version >= \"3.5\" in /usr/local/lib/python3.6/dist-packages (from gwpy) (4.0)\n",
+            "Requirement already satisfied: scipy>=0.12.1 in /usr/local/lib/python3.6/dist-packages (from gwpy) (1.4.1)\n",
             "Collecting pyOpenSSL\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9e/de/f8342b68fa9e981d348039954657bdf681b2ab93de27443be51865ffa310/pyOpenSSL-19.1.0-py2.py3-none-any.whl (53kB)\n",
-            "\u001b[K     |████████████████████████████████| 61kB 6.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (42.0.2)\n",
+            "\u001b[K     |████████████████████████████████| 61kB 5.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (0.10.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (2.4.6)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (1.1.0)\n",
             "Collecting cryptography>=2.8\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ca/9a/7cece52c46546e214e10811b36b2da52ce1ea7fa203203a629b8dfadad53/cryptography-2.8-cp34-abi3-manylinux2010_x86_64.whl (2.3MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.3MB 21.9MB/s \n",
-            "\u001b[?25hRequirement already satisfied: cffi!=1.11.3,>=1.8 in /usr/local/lib/python3.6/dist-packages (from cryptography>=2.8->pyOpenSSL->gwdatafind->gwpy) (1.13.2)\n",
+            "\u001b[K     |████████████████████████████████| 2.3MB 23.2MB/s \n",
+            "\u001b[?25hRequirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy) (42.0.2)\n",
+            "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /usr/local/lib/python3.6/dist-packages (from cryptography>=2.8->pyOpenSSL->gwdatafind->gwpy) (1.13.2)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.6/dist-packages (from cffi!=1.11.3,>=1.8->cryptography>=2.8->pyOpenSSL->gwdatafind->gwpy) (2.19)\n",
             "Building wheels for collected packages: ligo-segments\n",
             "  Building wheel for ligo-segments (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for ligo-segments: filename=ligo_segments-1.2.0-cp36-cp36m-linux_x86_64.whl size=83621 sha256=aa063356a79ae99012598617c690b7240b5d77ff2f8b6073fa0c9ec806a07e15\n",
+            "  Created wheel for ligo-segments: filename=ligo_segments-1.2.0-cp36-cp36m-linux_x86_64.whl size=83610 sha256=aff6de5c426651875fe7227f52778184b3ff96c4c61e8f0f672cf2ff8ac49ea6\n",
             "  Stored in directory: /root/.cache/pip/wheels/5d/1e/4a/ab4122baed7d67f6abce65b2b12049d3bc7fe5dad24edf89df\n",
             "Successfully built ligo-segments\n",
-            "Installing collected packages: gwosc, ligotimegps, ligo-segments, cryptography, pyOpenSSL, gwdatafind, dqsegdb2, gwpy\n",
+            "Installing collected packages: gwosc, ligo-segments, cryptography, pyOpenSSL, gwdatafind, dqsegdb2, ligotimegps, gwpy\n",
             "Successfully installed cryptography-2.8 dqsegdb2-1.0.1 gwdatafind-1.0.4 gwosc-0.4.3 gwpy-1.0.1 ligo-segments-1.2.0 ligotimegps-2.0.1 pyOpenSSL-19.1.0\n"
           ],
           "name": "stdout"
@@ -148,10 +148,10 @@
       "metadata": {
         "id": "JzRTNoRQQ8Nl",
         "colab_type": "code",
-        "outputId": "20870d29-093b-41b1-ac9e-fe91b1a0d4aa",
+        "outputId": "981377ab-7838-4e32-a97c-e7fb517269cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
@@ -198,10 +198,10 @@
       "metadata": {
         "id": "-BkUqpvkQ8Nv",
         "colab_type": "code",
-        "outputId": "00b6fd04-918d-49e7-ad18-91b7cdb4c5b5",
+        "outputId": "7447d54f-4aab-4994-bad0-599cf323db95",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         }
       },
       "source": [
@@ -237,10 +237,10 @@
       "metadata": {
         "id": "Hjc54bsuQ8N0",
         "colab_type": "code",
-        "outputId": "a6c2e4ae-d40e-4167-f93c-97b3683b4f19",
+        "outputId": "a25feb8f-2fba-4091-96b6-a997b1875009",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 52
         }
       },
       "source": [
@@ -274,10 +274,10 @@
       "metadata": {
         "id": "XZTniqwHQ8N-",
         "colab_type": "code",
-        "outputId": "fcbadbad-d227-4fd6-af33-d767effcd548",
+        "outputId": "11adc70a-9cc0-4a38-b45e-45746571da00",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         }
       },
       "source": [
@@ -309,10 +309,10 @@
       "metadata": {
         "id": "tdr8c15_Q8OD",
         "colab_type": "code",
-        "outputId": "6a9551cc-8c7b-4e68-c4bc-1e173bfef95b",
+        "outputId": "d0c58186-4197-459b-e67c-3dfc3db64bbd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -356,10 +356,10 @@
       "metadata": {
         "id": "QYsQSPNJQ8OK",
         "colab_type": "code",
-        "outputId": "c94aabb2-eeb8-4bc4-e1e9-16b1266184bd",
+        "outputId": "0415258a-cad5-4779-85d2-595ca9c20ce1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -396,10 +396,10 @@
       "metadata": {
         "id": "uMb1bsBNQ8OQ",
         "colab_type": "code",
-        "outputId": "329930f7-37a3-4eff-ebc1-ce66ae73d498",
+        "outputId": "ca3f6a31-5adf-45e5-c86d-e8a4696914d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         }
       },
       "source": [
@@ -433,10 +433,10 @@
       "metadata": {
         "id": "H7MfuRbPQ8OW",
         "colab_type": "code",
-        "outputId": "1d17cbd4-a8e6-46a3-e582-07fcdf869490",
+        "outputId": "2fc89919-72db-4bdb-bd4b-e073703cb62a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
